--- a/project_env.yml
+++ b/project_env.yml
@@ -48,24 +48,40 @@ dependencies:
   - zlib=1.2.11=h8cc25b3_4
   - zstd=1.4.9=h19a0ad4_0
   - pip:
+    - asttokens==2.0.8
     - axial-positional-embedding==0.2.1
+    - backcall==0.2.0
+    - colorama==0.4.5
     - cycler==0.11.0
+    - decorator==5.1.1
     - einops==0.4.1
+    - executing==1.1.1
     - fonttools==4.29.1
     - imageio==2.19.2
+    - ipython==8.5.0
+    - jedi==0.18.1
     - kiwisolver==1.3.2
     - local-attention==1.4.3
     - matplotlib==3.5.1
+    - matplotlib-inline==0.1.6
     - packaging==21.3
     - pandas==1.4.2
+    - parso==0.8.3
+    - pickleshare==0.7.5
     - product-key-memory==0.1.10
+    - prompt-toolkit==3.0.31
+    - pure-eval==0.2.2
     - pygame==2.1.2
+    - pygments==2.13.0
     - pyparsing==3.0.7
     - python-dateutil==2.8.2
     - pytz==2022.1
     - pyyaml==6.0
     - reformer-pytorch==1.4.4
+    - stack-data==0.5.1
     - tk==0.1.0
     - torch-summary==1.4.5
     - torchinfo==1.7.1
+    - traitlets==5.5.0
+    - wcwidth==0.2.5
 prefix: C:\Anaconda3\envs\ML
